--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
     <a class="active item" href="homepage.html">
       Home
     </a>
-    <a id="add-entry-btn" class="item">
+    <a id="add-entry-btn" class="item" href="add-entry.html">
       Add Entry
     </a>
     <a class="item" href="overview.html">
@@ -58,7 +58,6 @@
 
     <!-- MAIN CONTENT -->
     <div class="ui text container">
-
       <h1 class="ui inverted header">Moodsphere</h1>
       <h2 id="quote"></h2>
       <h4 id="author"></h4>
