--- a/homepage.html
+++ b/homepage.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- STANDARD META -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
 
-<head>
-  <!-- STANDARD META -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  
-  <!-- SITE PROPERTIES -->
-  <title>Moodsphere - Home</title>
+    <!-- SITE PROPERTIES -->
+    <title>Moodsphere - Home</title>
 
     <!-- STYLESHEETS: SEMANTIC UI, ICONS -->
     <link
@@ -30,11 +32,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
-  
-  <!-- CUSTOM STYLESHEET -->
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
-</head>
-  
+
+    <!-- CUSTOM STYLESHEET -->
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+  </head>
+
   <body>
     <!-- NAVIGATION -->
     <div class="ui sticky secondary pointing menu">
@@ -264,12 +266,14 @@
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
 
     <!-- JAVASCRIPT, JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-</body>
-
+  </body>
 </html>
