--- a/index.html
+++ b/index.html
@@ -38,49 +38,50 @@
   </head>
 </html>
 
-<body class="site">
+<body>
+  <div class="site">
   <!-- LOG IN / SIGN UP FORM -->
-  <div class="site-content">
-    <div class="content">
-      <div class="login-logo-div">
-    <img class="login-logo" src="assets/images/moodsphere_white.svg" alt="Moodsphere Logo">
-    <h1 class="login-heading">Moodsphere</h1>
+  <div class="site-content content">
+    <div class="login-logo-div">
+      <img class="login-logo" src="assets/images/moodsphere.svg" alt="Moodsphere Logo">
+      <h1 class="login-heading">Moodsphere</h1>
     </div>
     <form class="ui large form">
-          <div class="ui stacked segment">
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="user icon"></i>
-                <input
-                  type="text"
-                  name="email"
-                  id="email-input"
-                  placeholder="E-mail address"
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="email" id="email-input" placeholder="E-Mail Address"
                 />
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="lock icon"></i>
-                <input
-                  type="password"
-                  name="password"
-                  id="password-input"
-                  placeholder="Password"
-                />
-              </div>
-            </div>
-            <button class="ui fluid large submit button" id="login-btn">
-              Log In
-            </button>
-    </form>
-    </div> 
-    <div class="ui message">
-          Don't have an account, yet?
-          <button id="signup-btn" class="ui small submit button">
-            Sign Up
-          </button>
+          </div>
         </div>
+      <div class="field">
+        <div class="ui left icon input">
+          <i class="lock icon"></i>
+          <input type="password" name="password" id="password-input" placeholder="Password"
+                />
+        </div>
+      </div>
+      <button class="ui fluid large submit button" id="login-btn">Log In</button>
+    </form>
+    <div class="message">
+      Don't have an account, yet?
+      <button id="signup-btn" class="ui small submit button">Sign Up</button>
+    </div>
+  </div> 
+
+</div>
+  <!-- FOOTER -->
+  <div class="ui footer fixed" style="position: fixed; bottom: 0px; z-index: 10">
+    <div class="ui center aligned container">
+        <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
+        <a class="item" href="#">Nadine Juraschek</a><span class="divider-line"> | </span>
+        <a class="item" href="#">Morgan McMilin</a><span class="divider-line"> | </span>
+        <a class="item" href="#">Caitlin Phillips</a><span class="divider-line"> | </span>
+        <a class="item" href="#">Loralee Smith</a>
+    </div>
+    <div class="ui center aligned container copyright">® 2019</div>
+  </div>
 
   <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
