footer links edited

--- a/homepage.html
+++ b/homepage.html
@@ -65,14 +65,14 @@
       </div>
     </div>
 
-    <div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui masthead segment">
       <div class="jumbotron">
         <!-- MAIN CONTENT -->
         <div class="header-container">
           <div id="weather">
             <p id="display-date-weather"></p>
           </div>
-          <h1 class="ui inverted header">Welcome!</h1>
+          <h1 class="ui header welcome">How are you feeling today?</h1>
           <h2 id="quote"></h2>
           <hr class="short" />
           <h4 id="author"></h4>
@@ -131,6 +131,18 @@
         </tbody>
       </table>
     </div>
+
+    <!-- FOOTER -->
+  <div class="ui footer">
+    <div class="ui center aligned container">
+        <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
+        <a class="item" href="https://github.com/nadinejuraschek">Nadine Juraschek</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Morganatic">Morgan McMilin</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
+    </div>
+    <div class="ui center aligned container copyright">® 2019</div>
+  </div>
 
     <!-- ADD ENTRY -->
     <main class="ui modal site-content summary">
@@ -245,6 +257,7 @@
       </div>
 
       <hr />
+
       <!-- COMMENTS -->
       <div id="display-comments">
         <div class="ui form">
