--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
   </div> 
 
 </div>
+
   <!-- FOOTER -->
   <div class="ui footer fixed" style="position: fixed; bottom: 0px; z-index: 10">
     <div class="ui center aligned container">
         <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
-        <a class="item" href="#">Nadine Juraschek</a><span class="divider-line"> | </span>
-        <a class="item" href="#">Morgan McMilin</a><span class="divider-line"> | </span>
-        <a class="item" href="#">Caitlin Phillips</a><span class="divider-line"> | </span>
-        <a class="item" href="#">Loralee Smith</a>
+        <a class="item" href="https://github.com/nadinejuraschek">Nadine Juraschek</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Morganatic">Morgan McMilin</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
     </div>
     <div class="ui center aligned container copyright">® 2019</div>
   </div>
