--- a/homepage.html
+++ b/homepage.html
@@ -77,6 +77,9 @@
           <hr class="short" />
           <h4 id="author"></h4>
         </div>
+        <div class="arrow">
+          <i class="angle down icon"></i>
+        </div>
       </div>
     </div>
 
