--- a/discover.html
+++ b/discover.html
@@ -32,8 +32,8 @@
 </head>
 
 <body class="site">
-    <!-- NAVIGATION -->
-    <div class="ui sticky secondary pointing menu">
+  <!-- NAVIGATION -->
+  <div class="ui sticky secondary pointing menu">
       <img class="app-logo" src="assets/images/moodsphere.svg" alt="Moodsphere Logo" />
       <p class="ui header item app-name">Moodsphere</p>
       <div class="right menu">
@@ -306,6 +306,18 @@
       <div class="swiper-button-next"></div>
     </div>
   </main>
+
+  <!-- FOOTER -->
+    <div class="ui footer">
+      <div class="ui center aligned container">
+        <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
+        <a class="item" href="https://github.com/nadinejuraschek">Nadine Juraschek</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Morganatic">Morgan McMilin</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
+      </div>
+      <div class="ui center aligned container copyright">® 2019</div>
+    </div>
 
     <!-- ADD ENTRY -->
     <main class="ui modal site-content summary">
