--- a/overview.html
+++ b/overview.html
@@ -72,7 +72,7 @@
               id="depressed"
               class="mood"
               data-mood="depressed"
-              data-color="#5C8B93"
+              data-color="#2d484d"
               value="1"
             ></button>
             <p class="mood-text">depressed</p>
@@ -92,7 +92,7 @@
               id="moderate"
               class="mood"
               data-mood="moderate"
-              data-color="#8FDAE7"
+              data-color="#f9b38d"
               value="3"
             ></button>
             <p class="mood-text">moderate</p>
@@ -102,7 +102,7 @@
               id="happy"
               class="mood"
               data-mood="happy"
-              data-color="#A3E0EB"
+              data-color="#c0eba3"
               value="4"
             ></button>
             <p class="mood-text">happy</p>
@@ -112,7 +112,7 @@
               id="exhilirated"
               class="mood"
               data-mood="exhilirated"
-              data-color="#C1EAF1"
+              data-color="#9fee5f"
               value="5"
             ></button>
             <p class="mood-text">exhilirated</p>
